<resources>
    <string name="app_name">Money Saver</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="expenses">Expenses</string>
    <string name="category_name">Category Name</string>
    <string name="category_bound">Category Bound</string>
    <string name="warning_you_are_editing_a_expense">Warning! You are editing a expense</string>
    <string name="total">Total:</string>
    <string name="_0_0">$0.0</string>
    <string name="clear_all">Clear All</string>
</resources>
